Fixing spacing for the header/intro

--- a/styles.css
+++ b/styles.css
@@ -38,6 +38,7 @@ h1 {
 	text-align: center;
 	padding-left: 40px;
 	padding-right: 40px;
+	margin-bottom: 0px;
 }
 
 h2 {
@@ -55,6 +56,7 @@ h2 {
 #button {
 	font-size: 3rem;
 	top: 1s ease-in-out infinite;
+	margin-top: 30px;
 }
 
 a:hover {
